fixed GitHub page visibility

--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -30,7 +30,7 @@ body {
       height: 25px;
       width: 45px;
 
-      background-image: url(./img/icon/burger_menu.SVG);
+      background-image: url(./img/icon/burger_menu.svg);
 
       position: absolute;
       right: 28px;
@@ -39,7 +39,7 @@ body {
       cursor: pointer;
       &:hover {
         transition: 0.4s;
-        background-image: url(./img/icon/burger_menu__hover.SVG);
+        background-image: url(./img/icon/burger_menu__hover.svg);
       }
     }
     .logoDiv1 {
